Revision history for Music-Intervals

{{$NEXT}}

0.0804 2022-02-07 07:32:27
    - Fix the notes attribute default.

0.0803 2022-02-06 04:50:06
    - Copy the just-intonation scala file to eg/.
    - Improve documentation.

0.0802 2022-02-05 07:52:01
    - Fix the eg/* programs a bit more.

0.0801 2022-02-05 07:03:16
    - Fix the eg/* programs.
    - Improve documentation.

0.0800 2022-02-04 19:46:46
    * This is a fundamental change to the output.
    - Remove the chord aspect and just focus on intervals.
    - Improve documentation.
    - Improve the eg/intervals program.
    - Add the eg/intervals-numeric program.

0.0711 2022-02-01 12:47:49
    - Add the eg/benchmark program, just because I was curious.
    - Remove the method names from the keys.

0.0710 2022-02-01 12:08:22
    - Improve documentation.

0.0709 2022-02-01 12:02:03
    - And update the *::Numeric side too!

0.0708 2022-02-01 11:47:34
    - Allow single notes too!

0.0707 2022-01-30 17:28:08
    - Make the ratios attribute not-private!
    - Add the eg/scala example program.

0.0706 2022-01-30 16:48:46
    Modernize the Numeric module, too.

0.0705 2022-01-28 20:12:40
    - Improve documentation.
    - Add a test!
    - Get frequency with a handy module, instead of ugly math!

0.0704 2022-01-28 19:43:12
    - Hide attributes that shouldn't be fooled-with anyway.

0.0703 2022-01-28 15:48:42
    - Improve documentation.

0.0702 2022-01-28 15:26:51
    - Improve documentation.

0.0701 2022-01-28 12:45:56
    - Fix-up the eg/* programs.

0.0700 2022-01-28 11:06:13
    - Completely refactor the interface and performance penalties.

0.0603 2021-04-11 15:45:10
    - Clean-up code a bit.
    - Improve the numeric test slightly.

0.0602 2021-04-09 21:21:11
    - Improve documentation.

0.0601 2021-04-09 20:14:18
    - Fix ABSTRACTs.
    - Clean-up code slightly.

0.0600 2021-04-09 19:56:35
    - Lose the redundant Ratio module and compute the numeric ratios.
    - Make ratio_factorize() a proper method.